--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
   display: inline-block;
+  border-radius: 100px;
 }
 
 .btn:hover,
@@ -70,6 +71,9 @@ h2 {
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+img {
+  border-radius: 10px;
 }
 
 /* ------------------------ */
@@ -131,6 +135,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 10px;
 }
 
 .testimonial-box {
@@ -152,8 +157,14 @@ img {
 
 /* CHAIRS */
 
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .chair {
   box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
 .chair-box {
